--- a/sikimosya/html/index.html
+++ b/sikimosya/html/index.html
@@ -24,6 +24,26 @@
       </nav>
     </div>
   </header>
+  <main>
+    <div class="main_visual_block">
+      <div class="main_visual_side">
+        <p>株式会社四季の杜は外構、エクステリア、リフォーム、設計･施工の専門店です</p>
+        <div class="main_visual_side_text2">
+          <p>どんな小さな工事でもお気軽にご相談ください。<br>
+            どんな大きな工事でも施工図面をしっかり描き、積算します。</p>
+        </div>
+        <p class="top_catchcopy">
+          <span>物置・ガレージ</span>
+          <span>テラス・ミニハウス</span>
+          <span>多数展示中！</span>
+        </p>
+      </div>
+      <div class="main_visual">
+        <img src="../images/slide_01.jpg" alt="main_visual"> 
+
+      </div>
+    </div>
+  </main>
 
 </body>
 </html>
