--- a/sikimosya/html/index.html
+++ b/sikimosya/html/index.html
@@ -33,9 +33,9 @@
             どんな大きな工事でも施工図面をしっかり描き、積算します。</p>
         </div>
         <p class="top_catchcopy">
-          <span>物置・ガレージ</span>
-          <span>テラス・ミニハウス</span>
-          <span>多数展示中！</span>
+          <span class="topcatch1">物置・ガレージ</span>
+          <span class="topcatch2">テラス・ミニハウス</span>
+          <span class="topcatch3">多数展示中！</span>
         </p>
       </div>
       <div class="main_visual">
