--- a/sikimosya/html/index.html
+++ b/sikimosya/html/index.html
@@ -31,18 +31,62 @@
         <div class="main_visual_side_text2">
           <p>どんな小さな工事でもお気軽にご相談ください。<br>
             どんな大きな工事でも施工図面をしっかり描き、積算します。</p>
-        </div>
         <p class="top_catchcopy">
           <span class="topcatch1">物置・ガレージ</span>
           <span class="topcatch2">テラス・ミニハウス</span>
           <span class="topcatch3">多数展示中！</span>
         </p>
       </div>
+    </div>
       <div class="main_visual">
         <img src="../images/slide_01.jpg" alt="main_visual"> 
 
       </div>
     </div>
+
+    <div class="main_visual_block2">
+      <div class="sidenav">
+        <h2>四季の杜-施工例-</h2>
+      </div>
+        <ul class="side_list">
+          <li>ソーラーカーポート (8)</li>
+          <li>カーポート (127)</li>
+          <li>サイクルポート (29)</li>
+          <li>樹脂デッキ (44)</li>
+          <li>サンルーム・テラス (58)</li>
+          <li>目隠しフェンス (106)</li>
+          <li>お庭作り (62)</li>
+          <li>ガレージ (64)</li>
+          <li>門柱 (塗り塀・レンガ・化粧ブロック 他) (60)</li>
+          <li>アプローチ (72)</li>
+          <li>門廻り (25)</li>
+          <li>塗り塀 (14)</li>
+          <li>塀 (112)</li>
+          <li>駐車場 (80)</li>
+          <li>バイク保管庫 (14)</li>
+          <li>スタンプコンクリート (T様邸・完成までの工程) (5)</li>
+          <li>ゲート (引戸・伸縮門扉 他)  (31)</li>
+          <li>スロープ (手すり 他) (11)</li>
+          <li>事務所・小住宅  (ミニハウス) (10)</li>
+          <li>その他いろいろ！ (29)</li>  
+        </ul>
+        <ul class="side_contact">
+          <li><i class="fa-solid fa-phone"></i>0296-26-7101</li>
+          <li><i class="fa-regular fa-envelope"></i>メールでのお問い合わせ</li>
+        </ul>
+      <div class="side_contact2">
+        <p>
+          茨城県 筑西市玉戸西新田1087-1
+          <br>
+          営業時間  9:00~19:00
+          <br>
+          土・日・祝日も営業
+          <br>
+          定休日  木曜日
+        </p>
+      </div>
+
+      </div>
   </main>
 
 </body>
