--- a/sikimosya/html/index.html
+++ b/sikimosya/html/index.html
@@ -85,8 +85,13 @@
           定休日  木曜日
         </p>
       </div>
+      <div class="page">
+        <p>SHIKINOMORI</p>
+      </div>
+      
 
       </div>
+
   </main>
 
 </body>
