--- a/sikimosya/html/index.html
+++ b/sikimosya/html/index.html
@@ -86,10 +86,47 @@
         </div>
       </div>
       <div class="page">
-        <p>SHIKINOMORI</p>
-      </div>
-      
+        <section class="section-title">
+        <p class="title">SHIKINOMORI</p>
+        <h2 class="heading">
+          株式会社四季の杜は
+          <br>
+          <span class="frame">外構、エクステリア、リフォーム、設計・施工</span>
+          <br>
+          の専門店です
+        </h2>
+        <div class="btn">
+          <span>詳しく見る</span>
+        </div>
+        <div class="top_about_img">
+          <img src="../images/top_about_img.png" alt="top_about_img">
+        </div>
+      </section>
 
+      <section class="menu">
+        <p class="title-menu">Menu</p>
+        <h2 class="menu-heading">
+          取扱商品
+        </h2>
+        <p class="menu-text">
+          四季の杜にて取り扱っている商品のご案内です。
+          <br>
+          最新チラシ掲載品の詳細をご覧いただけます。
+        </p>
+        <div class="btn-menu">
+          <span>詳しく見る</span>
+        </div>
+        <div class="top_menu_img">
+          <img src="../images/top_menu_img.png" alt="top_menu_img">
+        </div>
+      </section>
+      <section class="info">
+        <p class="title-info">infomation</p>
+        <h2 class="info-heading">
+          インフォメーション
+        </h2>
+      </section>
+      </div>
       </div>
 
   </main>
