--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="header">
-    <div class="header-inner inner">
+    <div class="header-inner">
       <h1 class="header-title"><a href="#">株式会社 四季の杜</a></h1>
       <nav class="header-nav">
         <ul class="header-nav-list">
@@ -87,6 +87,7 @@
       </div>
       <div class="page">
         <section class="section-title">
+          <div style="width: 50%;">
         <p class="title">SHIKINOMORI</p>
         <h2 class="heading">
           株式会社四季の杜は
@@ -98,12 +99,14 @@
         <div class="btn">
           <span>詳しく見る</span>
         </div>
-        <div class="top_about_img">
+        </div>
+        <div class="top_about_img"  style="width: 50%;">
           <img src="../images/top_about_img.png" alt="top_about_img">
         </div>
       </section>
 
       <section class="menu">
+        <div style="width: 50%;">
         <p class="title-menu">Menu</p>
         <h2 class="menu-heading">
           取扱商品
@@ -116,18 +119,115 @@
         <div class="btn-menu">
           <span>詳しく見る</span>
         </div>
-        <div class="top_menu_img">
+      </div>
+        <div class="top_menu_img"  style="width: 50%;">
           <img src="../images/top_menu_img.png" alt="top_menu_img">
         </div>
       </section>
       <section class="info">
+        <div>
         <p class="title-info">infomation</p>
         <h2 class="info-heading">
           インフォメーション
         </h2>
+        <ul class="info-text">
+          <li>
+            <span>2023/12/02</span>
+            四季の杜最新のチラシ情報を公開しました。
+          </li>
+          <li>
+            <span>2023/10/07</span>
+            四季の杜最新のチラシ情報を公開しました。
+          </li>
+          <li>
+            <span>2023/06/01</span>
+            ホームページをリニューアルしました。
+          </li>
+        </ul>
+        <div class="info-btn"> 
+          <span>すべてのお知らせ<i class="fa-solid fa-angle-right"></i></span>
+        </div>
+        </div>
+      </section>
+      <section class="banner">
+        <div>
+          <h2 class="banner-text">取り扱いメーカー</h2>
+        </div>
+        <div class="banner-flex">
+          <div><img src="../images/top_bnr01.png" ></div>
+          <div><img src="../images/top_bnr02.png" ></div>
+          <div><img src="../images/top_bnr03.png" ></div>
+          <div><img src="../images/top_bnr04.png" ></div>
+          <div><img src="../images/top_bnr05.png" ></div>
+          <div><img src="../images/top_bnr06.png" ></div>
+          <div><img src="../images/top_bnr07.png" ></div>
+          <div><img src="../images/top_bnr08.png" ></div>
+        </div>
+      </section>
+      <section class="work">
+        <div>
+          <p class="title-work">work</p>
+          <h2 class="work-heading">
+            四季の杜 -施工例-
+          </h2>
+          <div class="work-flex">
+          <p class="work-text">
+            当社施工事例です。 
+            <span>年間実績は200件以上！</span>
+            <br>
+            茨城県内で数多くの施工実績を積み重ねている当社にお任せください。
+          </p>
+          <div class="work-img">
+            <img src="../images/top_work_img01.png">
+          </div>
+        </div>
+        <div class="work-imges">
+          <img src="../images/top_work_img02.png">
+        </div>
+        <div class="category">
+          <p>カテゴリー</p>
+          <ul>
+            <li>ソーラーカーポート</li>
+            <li>カーポート</li>
+            <li>サイクルポート</li>
+            <li>樹脂デッキ</li>
+            <li>サンルーム・テラス</li>
+            <li>目隠しフェンス</li>
+            <li>お庭作り (62)</li>
+            <li>ガレージ (64)</li>
+            <li>門柱 (塗り塀・レンガ・化粧ブロック 他) (60)</li>
+            <li>アプローチ (72)</li>
+            <li>門廻り (25)</li>
+            <li>塗り塀 (14)</li>
+            <li>塀 (112)</li>
+            <li>駐車場 (80)</li>
+            <li>バイク保管庫 (14)</li>
+            <li>スタンプコンクリート (T様邸・完成までの工程) (5)</li>
+            <li>ゲート (引戸・伸縮門扉 他)  (31)</li>
+            <li>スロープ (手すり 他) (11)</li>
+            <li>事務所・小住宅  (ミニハウス) (10)</li>
+            <li>その他いろいろ！ (29)</li>  
+          </ul>
+        </div>
+      </div>
       </section>
       </div>
       </div>
+
+      <footer>
+        <div class="page-footer">
+          <div class="footer-text">
+            <h2>お電話でのお問い合わせ</h2>
+            <p><i class="fa-solid fa-phone"></i>0296-26-7101</p>
+          </div>
+          <div class="footer-contact">
+            <p><i class="fa-regular fa-envelope"></i>メールでのお問い合わせ</p>
+          </div>
+        </div>
+        <div class="copyright">
+          <p>株式会社 四季の杜. All Rights Reserved.</p>
+        </div>
+      </footer>
 
   </main>
 
