--- a/sikimosya/html/index.html
+++ b/sikimosya/html/index.html
@@ -18,9 +18,13 @@
           <li class="header-nav-item"><a class="header-nav-item-link" href="#">取り扱い商品<span class="sub">MENU</span></a></li>
           <li class="header-nav-item"><a class="header-nav-item-link" href="#">工事までの流れ<span class="sub">FLOW</span></a></li>
           <li class="header-nav-item"><a class="header-nav-item-link" href="#">インフォメーション<span class="sub">INFOMATION</span></a></li>
-          <li><a class="header-nav-item-link" href="#"><i class="fa-solid fa-phone"></i>0296-26-7101</a></li>
+        <ul class="header-nav-tel">
+          <li><a class="header-nav-tel-link" href="#"><i class="fa-solid fa-phone"></i>0296-26-7101</a></li>
+        </ul>
+        <ul class="header-nav-contact">
           <li><i class="fa-regular fa-envelope"></i></li>
         </ul>
+      </ul>
       </nav>
     </div>
   </header>
@@ -106,7 +110,7 @@
       </section>
 
       <section class="menu">
-        <div style="width: 50%;">
+        <div class="menu-item">
         <p class="title-menu">Menu</p>
         <h2 class="menu-heading">
           取扱商品
