--- a/sikimosya/html/index.html
+++ b/sikimosya/html/index.html
@@ -6,11 +6,12 @@
   <title>四季の杜</title>
   <script src="https://kit.fontawesome.com/8e2702973d.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.cdnfonts.com/css/01-digitmono" rel="stylesheet">
 </head>
 <body>
   <header class="header">
     <div class="header-inner">
-      <h1 class="header-title"><a href="#">株式会社 四季の杜</a></h1>
+      <h1 class="header-title"><a href="#">株式会社 <span>四季の杜</span></a></h1>
       <nav class="header-nav">
         <ul class="header-nav-list">
           <li class="header-nav-item"><a class="header-nav-item-link" href="#">店舗情報・展示場<span class="sub">SHIKINOMORI</span></a></li>
@@ -18,12 +19,12 @@
           <li class="header-nav-item"><a class="header-nav-item-link" href="#">取り扱い商品<span class="sub">MENU</span></a></li>
           <li class="header-nav-item"><a class="header-nav-item-link" href="#">工事までの流れ<span class="sub">FLOW</span></a></li>
           <li class="header-nav-item"><a class="header-nav-item-link" href="#">インフォメーション<span class="sub">INFOMATION</span></a></li>
-        <ul class="header-nav-tel">
-          <li><a class="header-nav-tel-link" href="#"><i class="fa-solid fa-phone"></i>0296-26-7101</a></li>
-        </ul>
-        <ul class="header-nav-contact">
-          <li><i class="fa-regular fa-envelope"></i></li>
-        </ul>
+        <li class="header-nav-tel">
+          <div class="header-nav-tel-icon"><a class="header-nav-tel-link" href="#"><i class="fa-solid fa-phone"></i>0296-26-7101</a></div>
+        </li>
+        <li class="header-nav-contact">
+          <div class="header-nav-contact-icon"><a class="header-nav-contact-link" href="#"><i class="fa-regular fa-envelope"></i></a></div>
+        </li>
       </ul>
       </nav>
     </div>
@@ -31,10 +32,12 @@
   <main>
     <div class="main_visual_block">
       <div class="main_visual_side">
+        <div class="main_visual_side_text">
         <p>株式会社四季の杜は外構、エクステリア、リフォーム、設計･施工の専門店です</p>
         <div class="main_visual_side_text2">
           <p>どんな小さな工事でもお気軽にご相談ください。<br>
             どんな大きな工事でも施工図面をしっかり描き、積算します。</p>
+          </div>
         <p class="top_catchcopy">
           <span class="topcatch1">物置・ガレージ</span>
           <span class="topcatch2">テラス・ミニハウス</span>
@@ -175,12 +178,14 @@
             四季の杜 -施工例-
           </h2>
           <div class="work-flex">
+        <div class="work-flex-text">
           <p class="work-text">
             当社施工事例です。 
             <span>年間実績は200件以上！</span>
             <br>
             茨城県内で数多くの施工実績を積み重ねている当社にお任せください。
           </p>
+        </div>
           <div class="work-img">
             <img src="../images/top_work_img01.png">
           </div>
