--- a/sikimosya/html/index.html
+++ b/sikimosya/html/index.html
@@ -49,8 +49,9 @@
 
       </nav>
       <div class="hamburger">
-        <span></span>
-      </div>
+        <input type="checkbox" id="menu-btn-check">
+        <label for="menu-btn-check" class="menu-btn"><span></span></label>
+    </div>
       </nav>
 
     </div>
