--- a/sikimosya/html/index.html
+++ b/sikimosya/html/index.html
@@ -51,6 +51,20 @@
       <div class="hamburger">
         <input type="checkbox" id="menu-btn-check">
         <label for="menu-btn-check" class="menu-btn"><span></span></label>
+        <!--ここからメニュー-->
+        <div class="menu-content">
+          <ul>
+              <li>
+                  <a href="#">TOP</a>
+              </li>
+              <li>
+                  <a href="#">店舗情報・展示場</a>
+              </li>
+              <li>
+                  <a href="#">施工例</a>
+              </li>
+          </ul>
+      </div>
     </div>
       </nav>
 
@@ -125,7 +139,7 @@
       </div>
       <div class="page">
         <section class="section-title">
-          <div style="width: 50%;">
+          <div class="section-title-page">
         <p class="title">SHIKINOMORI</p>
         <h2 class="heading">
           株式会社四季の杜は
@@ -138,7 +152,7 @@
           <span>詳しく見る</span>
         </div>
         </div>
-        <div class="top_about_img"  style="width: 50%;">
+        <div class="top_about_img">
           <img src="../images/top_about_img.png" alt="top_about_img">
         </div>
         <div class="top_about_img_sp">
@@ -161,7 +175,7 @@
           <span>詳しく見る</span>
         </div>
       </div>
-        <div class="top_menu_img"  style="width: 50%;">
+        <div class="top_menu_img">
           <img src="../images/top_menu_img.png" alt="top_menu_img">
         </div>
       </section>
