--- a/sikimosya/html/index.html
+++ b/sikimosya/html/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>四季の杜</title>
   <script src="https://kit.fontawesome.com/8e2702973d.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../css/style.css">
   <link href="https://fonts.cdnfonts.com/css/01-digitmono" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
   <script>
@@ -248,22 +248,22 @@
             <li>カーポート</li>
             <li>サイクルポート</li>
             <li>樹脂デッキ</li>
-            <li>サンルーム・テラス</li>
+            <li>サンルーム・テラス・バルコニー</li>
             <li>目隠しフェンス</li>
-            <li>お庭作り (62)</li>
-            <li>ガレージ (64)</li>
-            <li>門柱 (塗り塀・レンガ・化粧ブロック 他) (60)</li>
-            <li>アプローチ (72)</li>
-            <li>門廻り (25)</li>
-            <li>塗り塀 (14)</li>
-            <li>塀 (112)</li>
-            <li>駐車場 (80)</li>
-            <li>バイク保管庫 (14)</li>
-            <li>スタンプコンクリート (T様邸・完成までの工程) (5)</li>
-            <li>ゲート (引戸・伸縮門扉 他)  (31)</li>
-            <li>スロープ (手すり 他) (11)</li>
-            <li>事務所・小住宅  (ミニハウス) (10)</li>
-            <li>その他いろいろ！ (29)</li>  
+            <li>お庭作り</li>
+            <li>ガレージ</li>
+            <li>門柱 (塗り塀・レンガ・化粧ブロック 他)</li>
+            <li>アプローチ </li>
+            <li>門廻り </li>
+            <li>塗り塀 </li>
+            <li>塀 </li>
+            <li>駐車場 </li>
+            <li>バイク保管庫 </li>
+            <li>スタンプコンクリート (T様邸・完成までの工程) </li>
+            <li>ゲート (引戸・伸縮門扉 他)  </li>
+            <li>スロープ (手すり 他) </li>
+            <li>事務所・小住宅  (ミニハウス) </li>
+            <li>その他いろいろ！ </li>  
           </ul>
         </div>
       </div>
