--- a/html/work.html
+++ b/html/work.html
@@ -23,12 +23,12 @@
 <body>
   <header class="header">
     <div class="header-inner">
-      <h1 class="header-title"><a href="#">株式会社 <span>四季の杜</span></a></h1>
+      <h1 class="header-title"><a href="index.html">株式会社 <span>四季の杜</span></a></h1>
       <nav class="header-nav">
         <ul class="header-nav-list">
-          <li class="header-nav-item"><a class="header-nav-item-link" href="#">店舗情報・展示場<span class="sub">SHIKINOMORI</span></a></li>
-          <li class="header-nav-item"><a class="header-nav-item-link" href="#">施行例<span class="sub">WORK</span></a></li>
-          <li class="header-nav-item"><a class="header-nav-item-link" href="#">取り扱い商品<span class="sub">MENU</span></a></li>
+          <li class="header-nav-item"><a class="header-nav-item-link" href="sikinomori.html">店舗情報・展示場<span class="sub">SHIKINOMORI</span></a></li>
+          <li class="header-nav-item"><a class="header-nav-item-link" href="work.html">施行例<span class="sub">WORK</span></a></li>
+          <li class="header-nav-item"><a class="header-nav-item-link" href="menu.html">取り扱い商品<span class="sub">MENU</span></a></li>
           <li class="header-nav-item"><a class="header-nav-item-link" href="#">工事までの流れ<span class="sub">FLOW</span></a></li>
           <li class="header-nav-item"><a class="header-nav-item-link" href="#">インフォメーション<span class="sub">INFOMATION</span></a></li>
         <li class="header-nav-tel">
