--- a/sikimosya/html/menu.html
+++ b/sikimosya/html/menu.html
@@ -45,9 +45,9 @@
 
       <nav class="sp-nav">
         <ul>
-          <li><a href="#">TOP</a></li>
-          <li><a href="#">店舗情報・展示場</a></li>
-          <li><a href="#">施工例</a></li>
+          <li><a href="index.html">TOP</a></li>
+          <li><a href="sikinomori.html">店舗情報・展示場</a></li>
+          <li><a href="work.html">施工例</a></li>
           <li class="close"><span>閉じる</span></li>
       </ul>
 
@@ -59,13 +59,13 @@
         <div class="menu-content">
           <ul>
               <li>
-                  <a href="#">TOP</a>
+                  <a href="index.html">TOP</a>
               </li>
               <li>
-                  <a href="#">店舗情報・展示場</a>
+                  <a href="sikinomori.html">店舗情報・展示場</a>
               </li>
               <li>
-                  <a href="#">施工例</a>
+                  <a href="work.html">施工例</a>
               </li>
           </ul>
       </div>
@@ -203,6 +203,109 @@
               <p>LIXIL：ネスカR 1台用</p></a></li>
               <li><a href="../images/6.jpg" data-lightbox="photo01" data-title="LIXIL：フーゴR両支持 1台用"><img src="../images/6.jpg">
               <p>LIXIL：フーゴR両支持 1台用</p></a></li>
+            </ul>
+          </div>
+        </div>
+        
+        <h3 class="menu-border">スタイリッシュツイン（2台用）</h3>
+        <div class="menu-flex">
+          <div class="menu-flex-img">
+           <a href="../images/main-4.jpg" data-lightbox="photo01" data-title="スタイリッシュツイン（2台用）"><img src="../images/main-4.jpg"></a>
+          </div>
+          <div class="menu-flex-text">
+            <p class="menu-flex-text-item">
+              <span class="blue">ハイルーフ仕様</span>
+              ポリカ屋根仕様
+              <br>
+              ロング柱仕様(H22)
+              <br>
+              <span class="menu-message">工事付59%引</span>
+              <br>
+              <span class="blue">標準工事付</span>
+            </p>
+            <p class="menu-price">
+              48-50　667,480円→
+              <span>276,000円</span>
+              （工事付・完成価格）
+              <br>
+              W:4826×D:5000×H:2215(mm) セミロング柱仕様
+            </p>
+            <p class="menu-price">
+              54-50　726,770円→
+              <span>296,000円</span>
+              （工事付・完成価格）
+              <br>
+              W:5416×D:5000×H:2215(mm) セミロング柱仕様
+            </p>
+            <p class="menu-price-text">
+              <span class="menu-text-item">【カラー】</span>
+              オータムブラウン、シャイングレー、ブラック、ナチュラルシルバー、4色用意 ポリカーボネート屋根材
+            </p>
+          </div>
+          <div>
+            <p class="menu-flex-item-text">
+              <span>関連商品</span>
+            </p>
+            <ul class="menu-flex-item-list">
+              <li><a href="../images/7.jpg" data-lightbox="photo01" data-title="YKK：エフルージュツインFIRST600タイプ 2台用"><img src="../images/7.jpg">
+                <p>YKK：エフルージュツインFIRST600タイプ 2台用</p></a></li>
+              <li><a href="../images/8.jpg" data-lightbox="photo01" data-title="YKK：エフルージュツインプラスFIRST600タイプ 2台用＋α"><img src="../images/8.jpg">
+                <p>YKK：エフルージュツインプラスFIRST600タイプ 2台用＋α</p></a></li>
+              <li><a href="../images/9.jpg" data-lightbox="photo01" data-title="三協：スカイリード（両側支持タイプ）"><img src="../images/9.jpg">
+              <p>三協：スカイリード（両側支持タイプ）</p></a></li>
+              <li><a href="../images/10.jpg" data-lightbox="photo01" data-title="三協：スカイリード （片側支持タイプ）"><img src="../images/10.jpg">
+              <p>三協：スカイリード （片側支持タイプ）</p></a></li>
+              <li><a href="../images/11.jpg" data-lightbox="photo01" data-title="LIXIL：ネスカF 1台用"><img src="../images/11.jpg">
+              <p>LIXIL：ネスカF 1台用</p></a></li>
+            </ul>
+          </div>
+        </div>
+
+        <h3 class="menu-border">フォーグ(4Gワイド)2台用</h3>
+        <div class="menu-flex">
+          <div class="menu-flex-img">
+           <a href="../images/main-3.jpg" data-lightbox="photo01" data-title="スタイリッシュツイン（2台用）"><img src="../images/main-3.jpg"></a>
+          </div>
+          <div class="menu-flex-text">
+            <p class="menu-flex-text-item">
+              H23(ロング柱)三協(カラー:サンシルバー・アーバングレー・ブラック　3色用意)
+              <br>
+              オプション:アクセントカラー2色
+              <span class="blue">大人気商品! </span>
+              ポリカ屋根材仕様
+              <br>
+              2本柱だから出入りがラクラク！
+              <br>
+              <span class="menu-message">本体 5割引!</span>
+              <br>
+              <span class="blue">工事代220,000円</span>
+            </p>
+            <p class="menu-price">
+              50-48　1,179,090円 →
+              <span>602,000円</span>
+              <br>
+              D:5003×W:4779×H:2350(mm)
+            </p>
+            <p class="menu-price">
+              50-54　1,254,550円 →
+              <span>639,000円</span>
+              <br>
+              D:5003×W:5389×H:2350(mm)
+              <br>
+              ポリカーボネート屋根材
+            </p>
+          </div>
+          <div>
+            <p class="menu-flex-item-text">
+              <span>関連商品</span>
+            </p>
+            <ul class="menu-flex-item-list">
+              <li><a href="../images/12.jpg" data-lightbox="photo01" data-title="LIXIL：アーキフラン 2台用"><img src="../images/12.jpg">
+                <p>LIXIL：アーキフラン 2台用</p></a></li>
+              <li><a href="../images/13.jpg" data-lightbox="photo01" data-title="YKK：エフルージュツインEX FIRST600タイプ2台用"><img src="../images/13.jpg">
+                <p>YKK：エフルージュツインEX FIRST600タイプ2台用</p></a></li>
+              <li><a href="../images/14.jpg" data-lightbox="photo01" data-title="三協：フォーグZ 49Zワイド"><img src="../images/14.jpg">
+              <p>三協：フォーグZ 49Zワイド</p></a></li>
             </ul>
           </div>
         </div>
