--- a/sikimosya/html/work.html
+++ b/sikimosya/html/work.html
@@ -43,9 +43,9 @@
 
       <nav class="sp-nav">
         <ul>
-          <li><a href="#">TOP</a></li>
-          <li><a href="#">店舗情報・展示場</a></li>
-          <li><a href="#">施工例</a></li>
+          <li><a href="index.html">TOP</a></li>
+          <li><a href="sikinomori.html">店舗情報・展示場</a></li>
+          <li><a href="work.html">施工例</a></li>
           <li class="close"><span>閉じる</span></li>
       </ul>
 
@@ -57,13 +57,13 @@
         <div class="menu-content">
           <ul>
               <li>
-                  <a href="#">TOP</a>
+                  <a href="index.html">TOP</a>
               </li>
               <li>
-                  <a href="#">店舗情報・展示場</a>
+                  <a href="sikinomori.html">店舗情報・展示場</a>
               </li>
               <li>
-                  <a href="#">施工例</a>
+                  <a href="work.html">施工例</a>
               </li>
           </ul>
       </div>
