--- a/sikimosya/html/index.html
+++ b/sikimosya/html/index.html
@@ -63,6 +63,15 @@
               <li>
                   <a href="work.html">施工例</a>
               </li>
+              <li>
+                <a href="menu.html">取り扱い商品</a>
+              </li>
+              <li>
+                <a href="flow.html">工事までの流れ</a>
+              </li>
+              <li>
+                <a href="infomation.html">インフォメーション</a>
+              </li>
           </ul>
       </div>
     </div>
