--- a/sikimosya/html/menu.html
+++ b/sikimosya/html/menu.html
@@ -31,8 +31,8 @@
           <li class="header-nav-item"><a class="header-nav-item-link" href="sikinomori.html">店舗情報・展示場<span class="sub">SHIKINOMORI</span></a></li>
           <li class="header-nav-item"><a class="header-nav-item-link" href="work.html">施行例<span class="sub">WORK</span></a></li>
           <li class="header-nav-item"><a class="header-nav-item-link" href="menu.html">取り扱い商品<span class="sub">MENU</span></a></li>
-          <li class="header-nav-item"><a class="header-nav-item-link" href="#">工事までの流れ<span class="sub">FLOW</span></a></li>
-          <li class="header-nav-item"><a class="header-nav-item-link" href="#">インフォメーション<span class="sub">INFOMATION</span></a></li>
+          <li class="header-nav-item"><a class="header-nav-item-link" href="flow.html">工事までの流れ<span class="sub">FLOW</span></a></li>
+          <li class="header-nav-item"><a class="header-nav-item-link" href="infomation.html">インフォメーション<span class="sub">INFOMATION</span></a></li>
         <li class="header-nav-tel">
           <div class="header-nav-tel-icon"><a class="header-nav-tel-link" href="#"><i class="fa-solid fa-phone"></i><p>0296-26-7101</p></a></div>
         </li>
@@ -66,6 +66,15 @@
               </li>
               <li>
                   <a href="work.html">施工例</a>
+              </li>
+              <li>
+                <a href="menu.html">取り扱い商品</a>
+              </li>
+              <li>
+                <a href="flow.html">工事までの流れ</a>
+              </li>
+              <li>
+                <a href="infomation.html">インフォメーション</a>
               </li>
           </ul>
       </div>
@@ -137,7 +146,7 @@
         </div>
 
         <div class="category">
-          <p>カテゴリー</p>
+          <p>カテゴリー一覧</p>
           <ul>
             <li>カーポート</li>
             <li>樹脂デッキ</li>
@@ -309,4 +318,35 @@
             </ul>
           </div>
         </div>
+
+        <div class="category">
+          <p>カテゴリー一覧</p>
+          <ul>
+            <li>カーポート</li>
+            <li>樹脂デッキ</li>
+            <li>サンルーム・テラス</li>
+            <li>サイクルポート</li>
+            <li>目隠しフェンス</li>
+            <li>物置・ガレージ</li>
+            <li>ソーラーカーポート</li>
+            <li>その他</li>
+          </ul>
+        </div>
+      </section>
+
+      <footer>
+        <div class="page-footer">
+          <div class="footer-text">
+            <h2>お電話でのお問い合わせ</h2>
+            <p><i class="fa-solid fa-phone"></i>0296-26-7101</p>
+          </div>
+          <div class="footer-contact">
+            <p><i class="fa-regular fa-envelope"></i>メールでのお問い合わせ</p>
+          </div>
+        </div>
+        <div class="copyright">
+          <p>株式会社 四季の杜. All Rights Reserved.</p>
+        </div>
+      </footer>
+    </div>
 </body>
