--- a/sikimosya/html/menu.html
+++ b/sikimosya/html/menu.html
@@ -32,7 +32,7 @@
           <li class="header-nav-item"><a class="header-nav-item-link" href="work.html">施行例<span class="sub">WORK</span></a></li>
           <li class="header-nav-item"><a class="header-nav-item-link" href="menu.html">取り扱い商品<span class="sub">MENU</span></a></li>
           <li class="header-nav-item"><a class="header-nav-item-link" href="flow.html">工事までの流れ<span class="sub">FLOW</span></a></li>
-          <li class="header-nav-item"><a class="header-nav-item-link" href="infomation.html">インフォメーション<span class="sub">INFOMATION</span></a></li>
+          <li class="header-nav-item"><a class="header-nav-item-link" href="information.html">インフォメーション<span class="sub">INFOMATION</span></a></li>
         <li class="header-nav-tel">
           <div class="header-nav-tel-icon"><a class="header-nav-tel-link" href="#"><i class="fa-solid fa-phone"></i><p>0296-26-7101</p></a></div>
         </li>
@@ -74,7 +74,7 @@
                 <a href="flow.html">工事までの流れ</a>
               </li>
               <li>
-                <a href="infomation.html">インフォメーション</a>
+                <a href="information.html">インフォメーション</a>
               </li>
           </ul>
       </div>
@@ -195,7 +195,7 @@
               オータムブラウン、シャイングレー、ブラック、ナチュラルシルバー、4色用意 ポリカーボネート屋根材
             </p>
           </div>
-          <div>
+          <div class="menu-item-width">
             <p class="menu-flex-item-text">
               <span>関連商品</span>
             </p>
@@ -251,7 +251,7 @@
               オータムブラウン、シャイングレー、ブラック、ナチュラルシルバー、4色用意 ポリカーボネート屋根材
             </p>
           </div>
-          <div>
+          <div class="menu-item-width">
             <p class="menu-flex-item-text">
               <span>関連商品</span>
             </p>
@@ -304,7 +304,7 @@
               ポリカーボネート屋根材
             </p>
           </div>
-          <div>
+          <div class="menu-item-width">
             <p class="menu-flex-item-text">
               <span>関連商品</span>
             </p>
