--- a/sikimosya/html/work.html
+++ b/sikimosya/html/work.html
@@ -29,8 +29,8 @@
           <li class="header-nav-item"><a class="header-nav-item-link" href="sikinomori.html">店舗情報・展示場<span class="sub">SHIKINOMORI</span></a></li>
           <li class="header-nav-item"><a class="header-nav-item-link" href="work.html">施行例<span class="sub">WORK</span></a></li>
           <li class="header-nav-item"><a class="header-nav-item-link" href="menu.html">取り扱い商品<span class="sub">MENU</span></a></li>
-          <li class="header-nav-item"><a class="header-nav-item-link" href="#">工事までの流れ<span class="sub">FLOW</span></a></li>
-          <li class="header-nav-item"><a class="header-nav-item-link" href="#">インフォメーション<span class="sub">INFOMATION</span></a></li>
+          <li class="header-nav-item"><a class="header-nav-item-link" href="flow.html">工事までの流れ<span class="sub">FLOW</span></a></li>
+          <li class="header-nav-item"><a class="header-nav-item-link" href="information.html">インフォメーション<span class="sub">INFOMATION</span></a></li>
         <li class="header-nav-tel">
           <div class="header-nav-tel-icon"><a class="header-nav-tel-link" href="#"><i class="fa-solid fa-phone"></i><p>0296-26-7101</p></a></div>
         </li>
@@ -72,7 +72,7 @@
                 <a href="flow.html">工事までの流れ</a>
               </li>
               <li>
-                <a href="infomation.html">インフォメーション</a>
+                <a href="information.html">インフォメーション</a>
               </li>
           </ul>
       </div>
